# nfc-wedge

./: AGENTS.md  ARCHITECTURE.md  BUILD.md  Cargo.toml  INSTALLER.md  LICENSE.md  PLAN.md  README.md
i18n/: ru.json
src/: app.rs  auto_start.rs  config.rs  event_bus.rs  i18n.rs  log_buffer.rs  main.rs  single_shot.rs  tray.rs  wedge.rs
src/nfc/: apdu.rs  mod.rs  ndef.rs  pcsc.rs  tag.rs
wix/: License.rtf  main.wxs
