[package]
name = "nfc-wedge"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
chrono = "0.4"
pcsc = "2.8"
crossbeam-channel = "0.5"
ndef-rs = "0.2.3"
enigo = "0.6"
tray-icon = "0.23"
image = "0.25"
auto-launch = "0.5"
